Refuse lifecycle mutation of manual Module JARs