@@ -1,19 +1,18 @@
 package io.github.didacll.madre.app;
 
 import io.github.didacll.madre.sdk.identity.ModuleId;
-import io.github.didacll.madre.sdk.registration.ModuleConfigurationDescriptor;
 import io.github.didacll.madre.sdk.registration.ModuleProvider;
 import io.github.didacll.madre.sdk.registration.ModuleProviderConfiguration;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Properties;
 import java.util.Set;
 import java.util.TreeMap;
+import java.util.stream.Collectors;
 
 /** Host-owned local-file lifecycle for independently packaged Module JARs. */
 final class ModuleArtifactLifecycle {
@@ -23,47 +22,44 @@ final class ModuleArtifactLifecycle {
 
     static InstallResult install(HostEnvironment host, HostEnvironment.LoadedConfiguration loaded,
             Properties properties, Path source, boolean replace) throws IOException {
-        Objects.requireNonNull(host, "host");
         Objects.requireNonNull(loaded, "loaded");
         Objects.requireNonNull(properties, "properties");
-        Path candidateJar = ManagedJarFiles.requireSourceJar(source);
-        ModuleId candidateId = inspectCandidate(candidateJar, properties);
-
-        Map<String, InstalledArtifact> installed = installed(host);
-        InstalledArtifact existing = installed.get(candidateId.value());
+        Path candidate = ManagedJarFiles.requireSourceJar(source);
+        ModuleId id = inspectCandidate(candidate, properties);
+        InstalledArtifact existing = installed(host).get(id.value());
         if (existing != null && existing.source() == Source.SHIPPED) {
-            throw new IllegalArgumentException("Module " + candidateId
+            throw new IllegalArgumentException("Module " + id
                     + " is shipped with MADRE and cannot be overridden by an owner artifact");
         }
+
+        Path owner = host.ownerModuleDirectory().toAbsolutePath().normalize();
         if (replace) {
             if (existing == null || existing.source() != Source.OWNER) {
-                throw new IllegalArgumentException("--replace requires an existing owner-installed Module: "
-                        + candidateId);
+                throw new IllegalArgumentException(
+                        "--replace requires an existing owner-installed Module: " + id);
             }
+            ManagedJarFiles.requireManagedPath(owner, "module", id.value(), existing.path());
         } else if (existing != null) {
-            throw new IllegalArgumentException("Module is already owner-installed: " + candidateId
+            throw new IllegalArgumentException("Module is already owner-installed: " + id
                     + "; use --replace to replace the same canonical identity");
         }
 
-        Path ownerDirectory = host.ownerModuleDirectory().toAbsolutePath().normalize();
-        Path destination = existing == null
-                ? ownerDirectory.resolve(ManagedJarFiles.managedFileName("module", candidateId.value()))
-                : existing.path();
+        Path destination = ManagedJarFiles.managedPath(owner, "module", id.value());
         if (existing == null && Files.exists(destination)) {
             throw new IllegalStateException("managed Module destination already exists without the expected "
                     + "provider identity: " + destination.getFileName());
         }
 
-        Path staged = ManagedJarFiles.stage(candidateJar, ownerDirectory);
-        final String digest;
+        Path staged = ManagedJarFiles.stage(candidate, owner);
         try {
             ModuleId stagedId = inspectCandidate(staged, properties);
-            if (!stagedId.equals(candidateId)) {
-                throw new IllegalStateException("staged Module identity changed from " + candidateId
+            if (!stagedId.equals(id)) {
+                throw new IllegalStateException("staged Module identity changed from " + id
                         + " to " + stagedId);
             }
-            digest = ManagedJarFiles.sha256(staged);
+            String digest = ManagedJarFiles.sha256(staged);
             ManagedJarFiles.commit(staged, destination);
+            return new InstallResult(id, destination, digest, replace);
         } catch (IOException | RuntimeException failure) {
             try {
                 Files.deleteIfExists(staged);
@@ -72,13 +68,10 @@ final class ModuleArtifactLifecycle {
             }
             throw failure;
         }
-        return new InstallResult(candidateId, destination, digest, replace);
     }
 
     static UninstallResult uninstall(HostEnvironment host, HostEnvironment.LoadedConfiguration loaded,
             Properties properties, String moduleId, boolean purgeConfiguration) throws IOException {
-        Objects.requireNonNull(host, "host");
-        Objects.requireNonNull(loaded, "loaded");
         Objects.requireNonNull(properties, "properties");
         ModuleId id = new ModuleId(moduleId);
         InstalledArtifact artifact = installed(host).get(id.value());
@@ -97,6 +90,8 @@ final class ModuleArtifactLifecycle {
         if (artifact.source() != Source.OWNER) {
             throw new IllegalArgumentException("Module is not in MADRE's owner-managed Module root: " + id);
         }
+        ManagedJarFiles.requireManagedPath(host.ownerModuleDirectory(), "module", id.value(),
+                artifact.path());
 
         String interaction = properties.getProperty("interaction.module");
         if (interaction != null && interaction.strip().equals(id.value())) {
@@ -114,8 +109,8 @@ final class ModuleArtifactLifecycle {
         }
 
         Properties previous = copy(properties);
-        boolean configurationChanged = hasConfiguration && purgeConfiguration;
-        if (configurationChanged) {
+        boolean changed = hasConfiguration && purgeConfiguration;
+        if (changed) {
             Properties candidate = copy(properties);
             candidate.stringPropertyNames().stream().filter(name -> name.startsWith(prefix)).toList()
                     .forEach(candidate::remove);
@@ -123,72 +118,58 @@ final class ModuleArtifactLifecycle {
             replaceProperties(properties, candidate);
         }
         try {
-            Path owner = host.ownerModuleDirectory().toAbsolutePath().normalize();
-            if (!artifact.path().getParent().equals(owner)) {
-                throw new IllegalStateException("refusing to delete Module artifact outside owner root: "
-                        + artifact.path());
-            }
             Files.delete(artifact.path());
         } catch (IOException | RuntimeException failure) {
-            if (configurationChanged) {
-                try {
-                    HostEnvironment.replaceConfiguration(loaded.path(), previous);
-                    replaceProperties(properties, previous);
-                } catch (IOException restoreFailure) {
-                    failure.addSuppressed(restoreFailure);
-                }
-            }
+            if (changed) restoreConfiguration(loaded.path(), properties, previous, failure);
             throw failure;
         }
-        return new UninstallResult(id, artifact.path(), configurationChanged);
+        return new UninstallResult(id, artifact.path(), changed);
     }
 
     static Source classify(HostEnvironment host, Path source) {
-        Path path = Objects.requireNonNull(source, "source").toAbsolutePath().normalize();
-        Path parent = path.getParent();
-        Path owner = host.ownerModuleDirectory().toAbsolutePath().normalize();
-        Path shipped = host.moduleDirectories().get(0).toAbsolutePath().normalize();
-        if (owner.equals(parent)) return Source.OWNER;
-        if (shipped.equals(parent)) return Source.SHIPPED;
+        Path parent = Objects.requireNonNull(source, "source").toAbsolutePath().normalize().getParent();
+        if (host.ownerModuleDirectory().toAbsolutePath().normalize().equals(parent)) return Source.OWNER;
+        if (host.moduleDirectories().getFirst().toAbsolutePath().normalize().equals(parent)) {
+            return Source.SHIPPED;
+        }
         return Source.DEVELOPMENT;
     }
 
     private static ModuleId inspectCandidate(Path jar, Properties properties) {
         try (InstalledModuleLoader modules = InstalledModuleLoader.forJar(jar);
                 InstalledReasoningLoader reasoning = InstalledReasoningLoader.forJar(jar)) {
-            List<ModuleProvider> moduleProviders = modules.providers();
+            List<ModuleProvider> providers = modules.providers();
             boolean reasoningPresent = !reasoning.providerDescriptors().isEmpty();
-            if (moduleProviders.isEmpty()) {
+            if (providers.isEmpty()) {
                 if (reasoningPresent) {
                     throw new IllegalArgumentException("reasoning-provider artifact cannot be installed as a Module");
                 }
                 throw new IllegalArgumentException("Module artifact exposes no ModuleProvider");
             }
-            if (moduleProviders.size() != 1) {
+            if (providers.size() != 1) {
                 throw new IllegalArgumentException("managed Module artifact must expose exactly one ModuleProvider");
             }
             if (reasoningPresent) {
-                throw new IllegalArgumentException(
-                        "managed Module artifact cannot also expose a reasoning provider");
+                throw new IllegalArgumentException("managed Module artifact cannot also expose a reasoning provider");
             }
-            ModuleProvider provider = moduleProviders.getFirst();
+
+            ModuleProvider provider = providers.getFirst();
             ModuleId id = Objects.requireNonNull(provider.moduleId(), "ModuleProvider.moduleId()");
-            ModuleConfigurationDescriptor descriptor = Objects.requireNonNull(
-                    provider.configurationDescriptor(), "ModuleProvider.configurationDescriptor()");
+            var descriptor = Objects.requireNonNull(provider.configurationDescriptor(),
+                    "ModuleProvider.configurationDescriptor()");
             if (!descriptor.moduleId().equals(id)) {
                 throw new IllegalStateException("Module configuration descriptor identity "
                         + descriptor.moduleId() + " does not match provider identity " + id);
             }
-            ModuleProviderConfiguration current = configuration(properties, id);
             ModuleProviderConfiguration validated = Objects.requireNonNull(
-                    provider.validateConfiguration(current),
+                    provider.validateConfiguration(configuration(properties, id)),
                     "ModuleProvider.validateConfiguration() returned null");
             if (!validated.moduleId().equals(id)) {
                 throw new IllegalStateException("Module configuration validation escaped identity " + id
                         + " to " + validated.moduleId());
             }
-            Set<String> declared = new HashSet<>();
-            descriptor.fields().forEach(field -> declared.add(field.name()));
+            Set<String> declared = descriptor.fields().stream().map(field -> field.name())
+                    .collect(Collectors.toSet());
             validated.keys().stream().filter(name -> !declared.contains(name)).findFirst()
                     .ifPresent(name -> {
                         throw new IllegalStateException(
@@ -201,13 +182,12 @@ final class ModuleArtifactLifecycle {
     private static Map<String, InstalledArtifact> installed(HostEnvironment host) {
         Map<String, InstalledArtifact> result = new TreeMap<>();
         try (InstalledModuleLoader loader = new InstalledModuleLoader(host.moduleDirectories())) {
-            for (InstalledModuleLoader.DiscoveredProvider discovered : loader.discoveredProviders()) {
+            for (var discovered : loader.discoveredProviders()) {
                 ModuleId id = Objects.requireNonNull(discovered.provider().moduleId(),
                         "ModuleProvider.moduleId()");
                 InstalledArtifact artifact = new InstalledArtifact(id, discovered.sourceJar(),
                         classify(host, discovered.sourceJar()));
-                InstalledArtifact previous = result.putIfAbsent(id.value(), artifact);
-                if (previous != null) {
+                if (result.putIfAbsent(id.value(), artifact) != null) {
                     throw new IllegalStateException("duplicate ModuleProvider identity: " + id.value());
                 }
             }
@@ -218,8 +198,8 @@ final class ModuleArtifactLifecycle {
     private static Path developmentSource(Properties properties, ModuleId id) {
         String configured = properties.getProperty("modules.directory");
         if (configured == null || configured.isBlank()) return null;
-        Path directory = Path.of(configured.strip()).toAbsolutePath().normalize();
-        try (InstalledModuleLoader loader = new InstalledModuleLoader(List.of(directory))) {
+        try (InstalledModuleLoader loader = new InstalledModuleLoader(
+                List.of(Path.of(configured.strip()).toAbsolutePath().normalize()))) {
             return loader.discoveredProviders().stream()
                     .filter(item -> item.provider().moduleId().equals(id))
                     .map(InstalledModuleLoader.DiscoveredProvider::sourceJar).findFirst().orElse(null);
@@ -230,8 +210,7 @@ final class ModuleArtifactLifecycle {
         String prefix = prefix(id);
         Map<String, String> values = new TreeMap<>();
         properties.stringPropertyNames().stream().filter(name -> name.startsWith(prefix)).sorted()
-                .forEach(name -> values.put(name.substring(prefix.length()),
-                        properties.getProperty(name)));
+                .forEach(name -> values.put(name.substring(prefix.length()), properties.getProperty(name)));
         return new ModuleProviderConfiguration(id, values);
     }
 
@@ -248,6 +227,16 @@ final class ModuleArtifactLifecycle {
     private static void replaceProperties(Properties destination, Properties source) {
         destination.clear();
         source.forEach(destination::put);
+    }
+
+    private static void restoreConfiguration(Path path, Properties destination, Properties previous,
+            Throwable failure) {
+        try {
+            HostEnvironment.replaceConfiguration(path, previous);
+            replaceProperties(destination, previous);
+        } catch (IOException restoreFailure) {
+            failure.addSuppressed(restoreFailure);
+        }
     }
 
     enum Source {
